nullaway_error_a3842f0b-d2f9-497a-b507-6eca83702458.txt
/home/nima/Developer/nullness-benchmarks/litiengine/src/de/gurkenlabs/litiengine/entities/CollisionEntity.java:86: error: [NullAway] returning @Nullable expression from method with @NonNull return type
    return this.collisionBox;
    ^
    (see http://t.uber.com/nullaway )
